# tinman_for_claudecode

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  setup.py
.claude-plugin/: plugin.json
.github/workflows/: tests.yml
commands/: tinman-heartbeat.md  tinman-status.md
docs/: HEARTBEAT_GUIDE.md  index.html
tests/: test_config.py  test_heartbeat.py  test_logger.py
tinman/: __init__.py  __main__.py  config.py  heartbeat.py  logger.py  scheduler.py
