[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinman-for-claudecode"
version = "0.1.0"
description = "Give your Claude Code agent a heartbeat. Proactive health checks, scheduled monitoring, and status notifications."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Andy Rosic", email = "andy@uninvited.llc"}
]
keywords = ["claude", "claude-code", "ai", "heartbeat", "monitoring", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"
dependencies = []  # zero runtime deps - stdlib only

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]

[project.scripts]
tinman = "tinman.__main__:main"

[project.urls]
Homepage = "https://github.com/andyuninvited/tinman_for_claudecode"
Repository = "https://github.com/andyuninvited/tinman_for_claudecode"
Issues = "https://github.com/andyuninvited/tinman_for_claudecode/issues"

[tool.setuptools.packages.find]
include = ["tinman*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
